# OpenRigLogic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_proposal.md
.github/workflows/: cmake-multi-platform.yml  code-formatting.yml  docs.yml
benchmarks/: CMakeLists.txt
benchmarks/rlbenchmarks/: BenchmarkRunner.cpp
cmake/: CMakeModulesExtra.cmake  RLDependencies.cmake
cmake/analysis/: Analysis.cmake  ClangStaticAnalyzer.cmake  ClangStaticAnalyzer.py  ClangTidy.cmake  CppCheck.cmake  Findinfer.cmake  Infer.cmake
cmake/benchmarks/: GoogleBenchmark.cmake
cmake/embed/: Embed.cmake  Template.h.in
cmake/formatting/: FindUncrustify.cmake  Uncrustify.cmake
cmake/install/: ConfigApplication.cmake.in  InstallApplication.cmake  InstallLibrary.cmake  RuntimeDependencies.cmake  Uninstall.cmake  Uninstall.cmake.in
cmake/sanitizers/: EnableSanitizers.cmake  Sanitizers.cmake
cmake/shaders/: FindGLSLC.cmake  GLSLC.cmake
cmake/symbols/: Defs.h.in
cmake/tests/: GoogleTest.cmake
cmake/utilities/: ExpandCommand.cmake
docs/design/: build.bat  design.md  src.md
docs/design/incl_md/: algorithm1.md  algorithm2.md  algorithm3.md  algorithm4.md
docs/design/incl_pdf/: algorithm1.md  algorithm2.md  algorithm3.md  algorithm4.md  onecol.md
docs/design/meta/: default.yml  header.tex
examples/: Advanced.cpp  Basic.cpp  CMakeLists.txt  Sample.cpp
python/: CMakeLists.txt
python/dna/: CMakeLists.txt  DNA.i  EnumTypeMap.i  insert_copyright.py
python/dna/examples/: demo.py
python/dna/tests/: test_dna.py
python/riglogic/: CMakeLists.txt  RigLogic.i
python/riglogic/examples/: demo.py
python/riglogic/tests/: test_riglogic.py
python/spyus/: CMakeLists.txt
python/spyus/include/spyus/: ArrayView.i  Caster.i
src/riglogic/ml/cpu/: CPUMachineLearnedBehaviorEvaluator.cpp  CPUMachineLearnedBehaviorFactory.cpp
tests/: CMakeLists.txt  TestRunner.cpp
tests/rltests/ml/cpu/: FixturesBlock4.cpp  FixturesMLBChained.cpp  TestMLBChained.cpp  TestStorageBuilder.cpp
tests/tdmtests/: TestComputations.cpp  TestCoordSys.cpp  TestMat.cpp  TestQuat.cpp  TestVec.cpp
